# bingo_simulator

./: .gitignore  Dockerfile  problems_and_solutions.ipynb  pyproject.toml
.github/workflows/: aws-test.yml  ci.yml  cicd.yml  python-app.yml
bingo_simulator/: bingo_card.py  bingo_card_generator.py  bingo_game.py  bingo_patterns.py  board.py  random_number_generator.py
bingo_simulator/app/: main.py
bingo_simulator/app/test/: test_fastapi_app.py
bingo_simulator/bingo_card/: bingo_card.py  bingo_card_generator.py
bingo_simulator/bingo_card/test/: test_bingo_card.py  test_card_generator.py
bingo_simulator/board/: board_generator.py
bingo_simulator/board/test/: test_board.py
bingo_simulator/test/: test_bingo_card.py  test_bingo_game.py  test_bingo_patterns.py  test_card_generator.py
