[tool.poetry]
name = "bingo_simulator"
version = "0.0.1"
description = ""
authors = ["John Cummings <jcummingsutk@gmail.com>"]
readme = "README.md"
packages = [{ include = "bingo_simulator" }]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.26.2"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
mangum = "^0.17.0"
httpx = "^0.25.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
